# ara-python

./: Ara.sln  ParserTests.cs  README.md  ara.g  code_generation.py  codegen.py  compiler.py  main.py  parser.py  pyproject.toml  syntax.py  xast.py
Ara/: Ara.csproj  Ara.g4  Ara.interp  AraBaseVisitor.cs  AraLexer.cs  AraLexer.interp  AraLexer.tokens  AraParser.cs  AraVisitor.cs  BinaryOp.cs  BinaryOperatorType.cs  Call.cs  IExpr.cs  Identifier.cs  Interpreter.cs  Number.cs  Parser.cs  Program.cs  README.md  String.cs  UnaryOp.cs  UnaryOperatorType.cs
Ara.Tests/: Ara.Tests.csproj  ParserTests.cs
Ara/Ast/: Array.cs  BinaryOp.cs  BinaryOpType.cs  Call.cs  Field.cs  IExpr.cs  Identifier.cs  Literal.cs  Object.cs  UnaryOp.cs  UnaryOpType.cs
