[tool.poetry]
name = "ara"
version = "0.1.0"
description = ""
authors = ["Kyle Kestell <kyle@kestell.org>"]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.2"
llvmlite = "^0.39.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
